# cloud-on-film

./: .eslintrc.js  .gitignore  Dockerfile  Gruntfile.js  MANIFEST.in  package-lock.json  package.json  requirements.txt  setup.cfg  uwsgi.ini
.github/workflows/: codeql.yml  tests.yaml
cloud_on_film/: __init__.py  __main__.py  commands.py  importing.py  models.py  routes.py  widgets.py
cloud_on_film/files/: picture.py
cloud_on_film/static/: base.js  edit-item.js  field-tags.js  gallery.css  libraries.js  search.js
cloud_on_film/templates/: field-tree.html.j2  file_card_picture.html.j2  file_item.html.j2  form_edit_batch.html.j2  form_libraries_upload.html.j2  form_search_delete.html.j2  libraries.html.j2  macros.html.j2  root.html.j2
instance/: config.yml.dist
src/: database.py  models.py  run.py  server.py  test.py  util.py
src/cloud/: __init__.py  forms.py  importing.py  libraries.py  models.py  routes.py  tags.py  util.py
src/cloud_db/: migrate.cfg
src/cloud_on_film/: __init__.py  config.py  fields.py  forms.py  importing.py  libraries.py  models.py  plugins.py  routes.py  search.py  tags.py  widgets.py
src/instance/: config.yml.dist
src/static/: base.js  bootstrap-custom.css  edit-item.js  field-browser.js  field-progress.js  gallery.css  libraries.js  search.js  sidebar.js  style.css
src/templates/: base.html  base.html.j2  field-tree.html.j2  file_card_picture.html  file_item.html  (+16 more)
testdata/: test_import.json
testing/: test_import.json
tests/: data_helper.py  fake_library.py  test_ajax.py  test_libraries.py  test_models.py  test_search.py
(+14 files in other folders)
