[metadata]
name = cloud-on-film-indigoparadox
version = v0.21.2.28
description = Web-based image and media organizer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/indigoparadox/cloud-on-film
protect_urls =
   Bug Tracker = https://github.com/indigoparadox/cloud-on-film/issues
classifiers =
   Programming Language :: Python :: 3
   Development Status :: 4 - Beta
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.6
include_package_data = True
zip_safe = False
install_requires =
   Faker
   ldap3
   six
   paho-mqtt
   numpy
   Flask
   Flask-Login
   Flask-SQLAlchemy
   Flask-Testing
   Flask-WTF
   itsdangerous
   Jinja2
   MarkupSafe
   Pillow
   PyYAML
   six
   SQLAlchemy
   Werkzeug
   WTForms

[options.entry_points]
console_scripts =
   cloud_on_film = cloud_on_film.__main__:main
